0.2.6 commit for LevelHeaded